<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cadastrar"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/rLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableRight="@drawable/ic_person"
            android:inputType="textWebEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/rEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textWebEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:text="@string/senha"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/rSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableRight="@drawable/ic_lock"
            android:inputType="textWebEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirmar_senha"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/rCSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableRight="@drawable/ic_lock"
            android:inputType="textWebEmailAddress" />

        <Button
            android:id="@+id/btnRegristro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/botoes"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/btnVoltarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="voltarLogin"
            android:background="@drawable/botoes"
            android:text="@string/voltar" />


    </LinearLayout>

</LinearLayout>